--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>KIPCHOGE KEINO'S TRIBUTE</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-    <h1> Hello World!We are software developers!</h1>
+    <h1>ELIUD KIPCHOGE</h1>
+    <p>The man who did the impossible</p>
+    
+    
 
     <script  src="js/index.js"></script>
   </body>
