I have added some html text to the repository

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body id = "main">
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <h1 id = "title">ELIUD KIPCHOGE</h1>
-    <p>The man who did the impossible</p>
+    <p>The man who did the impossible. The man who made sure that he changed history!</p>
     
     <div id = "img-div">
      <img src="https://media.cnn.com/api/v1/images/stellar/prod/210808193536-eliud-kipchoge-olympic-marathon.jpg?q=x_3,y_145,h_1423,w_2529,c_crop/h_720,w_1280" alt="Kipchoge picture" id = "image">
