I have added a biography section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
   
     </section>
 
+    <section id="biography">
+      <p>This is man who ran 42 kilometers in under two hours and changed the face of marathon running forever and put Kenyan athletics on the face of the planet.
+        This is a man who is Kalenjin by tribe; a tribe that is found on the central areas of the republic of Kenya. This tribe is known to produce among the top athletes on the planet.
+        They literally train in the highlands of MOUNT KENYA.
+      </p>
+
+
+    </section>
+
     <script  src="js/index.js"></script>
   </body>
 </html>
